syntax="proto3";

service InformationService {
  rpc getInformation(GetInformationRequest) returns (GetInformationResponse);
  rpc setReadFlag(SetReadFlagRequest) returns (SetReadFlagResponse);
}

message Information{
    string id = 0;
    string title = 1;
    string content = 2;
    string publishedAt = 3;
    bool read = 4;
    repeated string tag = 5;
}


message GetInformationRequest {
  optional int32 limit = 0;
  optional int32 offset = 1;
  string user = 2;
}

message GetInformationResponse {
  repeated Information Informations = 0;
}

message SetReadFlagRequest {
  string id = 1;
  string userId = 2;
  bool read = 3;
}

message SetReadFlagResponse{}